2024-05-19T08:21:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9146255094 # 286
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 378 764
* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 379 765
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-18T16:22:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9141165127 # 284
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
* notice: last 14d: unq all: 6 19
* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 378 763
* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 378 764
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-18]

2024-05-18T08:21:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9138534516 # 283
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
* notice: last 14d: unq all: 6 18
* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 377 762
* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 378 763
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-18]

2024-05-17T16:23:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9131284475 # 281