@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-19T08:21:44Z",
+  "timestamp" : "2024-05-19T16:22:51Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 765,
+  "count" : 766,
   "uniques" : 379,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2024-05-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
