@@ -1,3 +1,12 @@
+2024-05-19T16:22:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9149010249 # 287
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
+* notice: last 14d: unq all: 6 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 379 765
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 379 766
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-05-19]
+
 2024-05-19T08:21:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9146255094 # 286
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
